# rust_server

./: .env  .gitignore  Cargo.toml
.sqlx/: query-316642d284bbe9117a57cf386e42ddc8387149abeb37911d1716cb3a366ece2f.json  query-32a20abaf27560444406ce1f43f1588f47b3c04c83556468298b7a0dee1f693e.json
config/: setup.toml
migrations/: 20240203102359_users.sql
src/: lib.rs  main.rs  pool.rs  server.rs  settings.rs
src/db/: postgres.rs
src/model/: user.rs
src/routes/: mod.rs  store.rs  users.rs
tests/: config.rs
tests/assets/: setup.toml
