[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.4.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls" , "postgres"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.196"
config = "0.14.0"
tracing = { version = "0.1.40", features = ["log"] }
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.9"
log = "0.4.20"
serde_json = "1.0.113"
async-trait = "0.1.77"
anyhow = "1.0.79"
thiserror = "1.0.56"
serde-aux = "4.4.0"
redis = { version = "0.17.0", features = ["aio"] }
bytes = "1.5.0"
redis-async-pool = "0.2.4"
